# acp-bridge

./: .dockerignore  .gitignore  AGENT.md  AGENT_SPEC.md  CHANGELOG.md  Dockerfile  LICENSE  OPERATIONS.md  README.agent.md  README.md  README.zh-CN.md  bridge-ctl.sh  config.yaml  config.yaml.docker-example  config.yaml.example  docker-compose.yml  install.sh  litellm_callback.py  main.py  pyproject.toml  stack-ctl.sh  start.sh
docs/: acp-bridge-conversation-mode-spec.md  agents.md  api-reference.md  async-jobs.md  client-usage.md  configuration.md  getting-started.md  mesh.md  pipelines.md  process-pool.md  security.md  testing.md  tools-proxy.md  troubleshooting.md  tutorial.md  v0.8.0-pipeline-design.md  webhooks.md
examples/: echo-agent.py
mcp-server/: README.md  server.py
prompts/: a2a_rules.txt  a2a_rules_zh.txt  conversation_first_turn.txt  conversation_first_turn_zh.txt  shared_workspace.txt  shared_workspace_zh.txt
skill/: SKILL.md  acp-client.sh  reference.md  troubleshooting.md
src/: acp_client.py  agent_pool.py  agents.py  auto_detect.py  capability_registry.py  circuit_breaker.py  complexity.py  cost.py  exceptions.py  fallback_policy.py  formatters.py  heartbeat.py  jobs.py  mesh.py  mesh_a2a.py  mesh_client.py  metrics.py  pipeline.py  prompt_log.py  rate_limiter.py  s3.py  security.py  sse.py  stats.py  store.py  templates.py  trace.py  trace_impl.py  utils.py  webhook.py
static/: index.html
test/: lib.sh  pytest.sh  test.sh  test_agent_compliance.sh  test_agents.py  test_agents_p0.py  test_agents_p1.py  test_circuit_breaker.py  test_claude.sh  (+22 more)
(+93 files in other folders)
