[project]
name = "acp-bridge"
dynamic = ["version"]
description = "Bridge service exposing local CLI agents via ACP over HTTP"
authors = [{name = "Xi Wan", email = "5155280@qq.com"}]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
dependencies = [
    "acp-sdk>=1.0.3",
    "boto3>=1.42.93",
    "pyyaml>=6.0.3",
]

[tool.setuptools.dynamic]
version = {file = "VERSION"}
